--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "common-readme": "^1.1.0"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "bash scripts/postinstall.bash",
+        "build": "bash scripts/build-plugin.bash"
     },
     "repository": {
         "type": "git",
@@ -18,5 +20,6 @@
     "bugs": {
         "url": "https://github.com/kbase/kbase-ui-plugin-job-browser2/issues"
     },
-    "homepage": "https://github.com/kbase/kbase-ui-plugin-job-browser2#readme"
+    "homepage": "https://github.com/kbase/kbase-ui-plugin-job-browser2#readme",
+    "files": {}
 }
