--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "bash scripts/postinstall.bash",
-        "build": "bash scripts/build-plugin.bash"
+        "postinstall": "bash scripts/postinstall.bash"
     },
     "repository": {
         "type": "git",
