--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -9,18 +9,18 @@
         "@types/enzyme": "3.9.3",
         "@types/enzyme-adapter-react-16": "1.0.5",
         "@types/jest": "24.0.13",
-        "@types/node": "12.0.4",
+        "@types/node": "12.0.7",
         "@types/react": "16.8.19",
         "@types/react-dom": "16.8.4",
         "@types/react-redux": "7.0.9",
         "@types/uuid": "3.4.4",
-        "antd": "3.19.2",
+        "antd": "3.19.3",
         "bluebird": "3.5.5",
         "craco-antd": "1.11.0",
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.14.0",
         "es-cookie": "1.2.0",
-        "kbase-ui-lib": "file:../../../kbase-ui-lib/kbase-ui-lib-0.1.0.tgz",
+        "kbase-ui-lib": "eapearson/kbase-ui-lib",
         "react": "16.8.6",
         "react-dom": "16.8.6",
         "react-redux": "7.0.3",
