more work to integrate w/ui; adjust to changes to kbase-ui-lib

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@ node_modules/
 /src/plugin/iframe_root/*
 !/src/plugin/iframe_root/README.md 
 
+# created by npm if install with --no-cache option
+false
+
 
