--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -5,14 +5,15 @@
     "homepage": "./",
     "dependencies": {
         "@craco/craco": "5.2.1",
+        "@kbase/ui-lib": "0.1.0-alpha.3",
         "@types/bluebird": "3.5.27",
         "@types/enzyme": "3.9.3",
         "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "24.0.13",
-        "@types/node": "12.0.7",
-        "@types/react": "16.8.19",
+        "@types/jest": "24.0.14",
+        "@types/node": "12.0.8",
+        "@types/react": "16.8.20",
         "@types/react-dom": "16.8.4",
-        "@types/react-redux": "7.0.9",
+        "@types/react-redux": "7.1.0",
         "@types/uuid": "3.4.4",
         "antd": "3.19.3",
         "bluebird": "3.5.5",
@@ -20,23 +21,22 @@
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.14.0",
         "es-cookie": "1.2.0",
-        "kbase-ui-lib": "eapearson/kbase-ui-lib",
         "react": "16.8.6",
         "react-dom": "16.8.6",
-        "react-redux": "7.0.3",
+        "react-redux": "7.1.0",
         "react-scripts": "3.0.1",
         "react-test-renderer": "16.8.6",
         "redux": "4.0.1",
         "redux-thunk": "2.3.0",
         "typeface-oxygen": "0.0.72",
-        "typescript": "3.4.5",
+        "typescript": "3.5.2",
         "uuid": "3.3.2"
     },
     "scripts": {
         "start": "nodemon -w ./craco.config.js -w ./src/custom/style/antd/theme.less --exec 'craco start'",
         "build": "craco build",
         "plugin": "bash scripts/postbuild.bash",
-        "test": "craco test --transformIgnorePatterns  \"<rootDir>[\\/]node_modules[\\/](?!kbase-ui-lib).+\\.js$\"",
+        "test": "craco test --transformIgnorePatterns  \"<rootDir>[\\/]node_modules[\\/](?!@kbase/ui-lib).+\\.js$\"",
         "eject": "react-scripts eject"
     },
     "jest": {
