fix install script

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 node_modules/
 
 # The build plugin goes here. We don't want to check it it from 
-# a developer session, but we do like to keep the directory in the repo,
-# thus the placeholder README file.
-/src/plugin/iframe_root/*
-!/src/plugin/iframe_root/README.md 
+# a developer session.
+/src/plugin/iframe_root
 
 # created by npm if install with --no-cache option
 false
