--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -35,7 +35,7 @@
     "scripts": {
         "start": "nodemon -w ./craco.config.js -w ./src/custom/style/antd/theme.less --exec 'craco start'",
         "build": "craco build",
-        "plugin": "bash scripts/postbuild.bash",
+        "install-plugin": "bash scripts/install-plugin.bash",
         "testx": "craco test --transformIgnorePatterns  \"<rootDir>[\\/]node_modules[\\/](?!@kbase/ui-lib).+\\.js$\"",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
