adjust to new ui build process for github based iframe plugins, move files around

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,14 @@ node_modules/
 
 # The build plugin goes here. We don't want to check it it from 
 # a developer session.
-/src/plugin/iframe_root
+
+/plugin/iframe_root 
 
 # created by npm if install with --no-cache option
 false
 
 _site
 
+# Put stuff in _trash to move it out of the way, and omit it from the repo 
+# (but keep it locally to support procrastination.)
+_trash
