--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 .DS_Store
 node_modules/
 
-# The build plugin goes here. We don't want to check it it from 
-# a developer session.
-
+# The built plugin app goes here during a top level build; we don't want to check
+# that is as it is build during install in kbase-ui
 /plugin/iframe_root 
 
 # created by npm if install with --no-cache option
 false
 
+# created by yarn, but causes problems with kbase-ui builds.
+yarn.lock
+
+# Artifact of local github pages development
 _site
 
 # Put stuff in _trash to move it out of the way, and omit it from the repo 
