--- a/react-app/package.json
+++ b/react-app/package.json
@@ -63,7 +63,7 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://ci.kbase.us",
+    "proxy": "https://kbase.us",
     "devDependencies": {
         "nodemon": "^1.19.1",
         "typedoc": "^0.14.2"
