--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "bash scripts/postinstall.bash"
+        "install-plugin": "bash scripts/install-plugin.bash"
     },
     "repository": {
         "type": "git",
