--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,36 +4,40 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
-        "@craco/craco": "5.2.4",
-        "@kbase/ui-lib": "0.1.0-alpha.50",
-        "@types/bluebird": "3.5.27",
-        "@types/enzyme": "3.10.2",
-        "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "24.0.15",
-        "@types/node": "12.6.2",
-        "@types/react": "16.8.23",
-        "@types/react-dom": "16.8.4",
-        "@types/react-redux": "7.1.1",
-        "@types/uuid": "3.4.5",
-        "antd": "3.20.2",
+        "@craco/craco": "5.4.0",
+        "@kbase/ui-lib": "0.2.0-alpha.3",
+        "@kbase/ui-components": "0.2.0-alpha.2",
+        "@types/bluebird": "*",
+        "@types/enzyme": "*",
+        "@types/enzyme-adapter-react-16": "*",
+        "@types/jest": "*",
+        "@types/node": "*",
+        "@types/papaparse": "*",
+        "@types/react": "*",
+        "@types/react-dom": "*",
+        "@types/react-redux": "*",
+        "@types/react-transition-group": "*",
+        "@types/uuid": "*",
+        "antd": "3.23.1",
         "bluebird": "3.5.5",
-        "craco-antd": "1.11.0",
+        "craco-antd": "1.12.0",
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.14.0",
         "es-cookie": "1.2.0",
-        "react": "16.8.6",
-        "react-dom": "16.8.6",
-        "react-redux": "7.1.0",
-        "react-scripts": "3.0.1",
-        "react-test-renderer": "16.8.6",
+        "papaparse": "^5.0.2",
+        "react": "16.9.0",
+        "react-dom": "16.9.0",
+        "react-redux": "7.1.1",
+        "react-scripts": "3.1.1",
+        "react-test-renderer": "16.9.0",
+        "react-transition-group": "^4.2.2",
         "redux": "4.0.4",
         "redux-thunk": "2.3.0",
-        "typeface-oxygen": "0.0.72",
-        "typescript": "3.5.3",
-        "uuid": "3.3.2"
+        "typescript": "3.6.2",
+        "uuid": "3.3.3"
     },
     "scripts": {
-        "start": "nodemon -w ./craco.config.js -w ./src/custom/style/antd/theme.less --exec 'craco start'",
+        "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec 'craco start'",
         "build": "craco build",
         "install-plugin": "bash scripts/install-plugin.bash",
         "testx": "craco test --transformIgnorePatterns  \"<rootDir>[\\/]node_modules[\\/](?!@kbase/ui-lib).+\\.js$\"",
@@ -65,7 +69,7 @@
     },
     "proxy": "https://ci.kbase.us",
     "devDependencies": {
-        "nodemon": "^1.19.1",
-        "typedoc": "^0.14.2"
+        "nodemon": "^1.19.2",
+        "typedoc": "^0.15.0"
     }
 }
