--- a/react-app/package.json
+++ b/react-app/package.json
@@ -24,13 +24,13 @@
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.14.0",
         "es-cookie": "1.2.0",
-        "papaparse": "^5.0.2",
+        "papaparse": "5.0.2",
         "react": "16.9.0",
         "react-dom": "16.9.0",
         "react-redux": "7.1.1",
         "react-scripts": "3.1.1",
         "react-test-renderer": "16.9.0",
-        "react-transition-group": "^4.2.2",
+        "react-transition-group": "4.3.0",
         "redux": "4.0.4",
         "redux-thunk": "2.3.0",
         "typescript": "3.6.2",
