--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,9 +4,9 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
-        "@craco/craco": "5.5.0",
+        "@craco/craco": "5.6.1",
         "@kbase/ui-lib": "0.2.0-alpha.5",
-        "@kbase/ui-components": "0.2.1-alpha.6",
+        "@kbase/ui-components": "0.2.1-alpha.8",
         "@types/bluebird": "*",
         "@types/enzyme": "*",
         "@types/enzyme-adapter-react-16": "*",
@@ -18,18 +18,18 @@
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "3.24.2",
+        "antd": "3.24.3",
         "bluebird": "3.7.1",
         "craco-antd": "1.14.1",
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.15.1",
         "es-cookie": "1.3.0",
         "papaparse": "5.1.0",
-        "react": "16.10.2",
-        "react-dom": "16.10.2",
+        "react": "16.11.0",
+        "react-dom": "16.11.0",
         "react-redux": "7.1.1",
         "react-scripts": "3.2.0",
-        "react-test-renderer": "16.10.2",
+        "react-test-renderer": "16.11.0",
         "react-transition-group": "4.3.0",
         "redux": "4.0.4",
         "redux-thunk": "2.3.0",
@@ -67,7 +67,7 @@
             "last 1 safari version"
         ]
     },
-    "xproxy": "https://ci.kbase.us",
+    "xproxy": "https://appdev.kbase.us",
     "devDependencies": {
         "nodemon": "1.19.4",
         "typedoc": "0.15.0",
