--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,8 +5,8 @@
     "homepage": "./",
     "dependencies": {
         "@craco/craco": "5.6.1",
+        "@kbase/ui-components": "0.2.1-alpha.9",
         "@kbase/ui-lib": "0.2.1-alpha.2",
-        "@kbase/ui-components": "0.2.1-alpha.6",
         "@types/bluebird": "*",
         "@types/enzyme": "*",
         "@types/enzyme-adapter-react-16": "*",
@@ -18,7 +18,7 @@
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "3.24.3",
+        "antd": "3.23.6",
         "bluebird": "3.7.1",
         "craco-antd": "1.14.1",
         "enzyme": "3.10.0",
@@ -69,9 +69,9 @@
     },
     "xproxy": "https://appdev.kbase.us",
     "devDependencies": {
-        "nodemon": "1.19.4",
-        "typedoc": "0.15.0",
+        "http-proxy-middleware": "0.20.0",
         "morgan": "1.9.1",
-        "http-proxy-middleware": "0.20.0"
+        "nodemon": "1.19.4",
+        "typedoc": "0.15.0"
     }
 }
