--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
-        "@craco/craco": "5.6.2",
+        "@craco/craco": "5.6.3",
         "@kbase/ui-components": "0.2.1-alpha.10",
         "@kbase/ui-lib": "0.2.1-alpha.2",
         "@types/bluebird": "*",
@@ -18,7 +18,7 @@
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "3.26.3",
+        "antd": "3.26.6",
         "bluebird": "3.7.2",
         "craco-antd": "1.14.1",
         "enzyme": "3.11.0",
@@ -31,9 +31,9 @@
         "react-scripts": "3.3.0",
         "react-test-renderer": "16.12.0",
         "react-transition-group": "4.3.0",
-        "redux": "4.0.4",
+        "redux": "4.0.5",
         "redux-thunk": "2.3.0",
-        "typescript": "3.7.3",
+        "typescript": "3.7.4",
         "uuid": "3.3.3"
     },
     "scripts": {
@@ -69,9 +69,12 @@
     },
     "xproxy": "https://appdev.kbase.us",
     "devDependencies": {
+        "bluebird": "3.7.2",
         "http-proxy-middleware": "0.20.0",
         "morgan": "1.9.1",
         "nodemon": "2.0.2",
-        "typedoc": "0.15.5"
+        "tar": "5.0.5",
+        "typedoc": "0.15.6",
+        "fs-extra": "8.1.0"
     }
 }
