migrate to dist.tgz build

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -39,7 +39,7 @@
     "scripts": {
         "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec 'craco start'",
         "build": "craco build",
-        "install-plugin": "bash scripts/install-plugin.bash",
+        "install-plugin": "node scripts/install-plugin.js",
         "testx": "craco test --transformIgnorePatterns  \"<rootDir>[\\/]node_modules[\\/](?!@kbase/ui-lib).+\\.js$\"",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
