--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
     "version": "1.0.0",
     "description": "A kbase-ui plugin to allow a KBase user to view their existing jobs; and for job admins to manage all jobs.",
     "main": "index.js",
+    "devDependencies": {
+        "common-readme": "1.1.0",
+        "eslint": "6.8.0",
+        "@typescript-eslint/parser": "2.15.0",
+        "@typescript-eslint/eslint-plugin": "2.15.0",
+        "typescript": "3.7.4"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build-plugin": "bash scripts/build-plugin.bash"
