--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
         "url": "https://github.com/kbase/kbase-ui-plugin-job-browser2/issues"
     },
     "homepage": "https://github.com/kbase/kbase-ui-plugin-job-browser2#readme",
-    "files": {}
+    "files": []
 }
