--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,8 +5,8 @@
     "homepage": "./",
     "dependencies": {
         "@craco/craco": "5.6.3",
-        "@kbase/ui-components": "0.2.1-alpha.10",
-        "@kbase/ui-lib": "0.2.1-alpha.2",
+        "@kbase/ui-components": "0.2.1-alpha.14",
+        "@kbase/ui-lib": "0.2.1-alpha.3",
         "@types/bluebird": "*",
         "@types/enzyme": "*",
         "@types/enzyme-adapter-react-16": "*",
@@ -18,23 +18,23 @@
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "3.26.6",
+        "antd": "3.26.11",
         "bluebird": "3.7.2",
         "craco-antd": "1.14.1",
         "enzyme": "3.11.0",
         "enzyme-adapter-react-16": "1.15.2",
-        "es-cookie": "1.3.0",
+        "es-cookie": "1.3.2",
         "papaparse": "5.1.1",
         "react": "16.12.0",
         "react-dom": "16.12.0",
-        "react-redux": "7.1.3",
-        "react-scripts": "3.3.0",
+        "react-redux": "7.2.0",
+        "react-scripts": "3.4.0",
         "react-test-renderer": "16.12.0",
         "react-transition-group": "4.3.0",
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
-        "typescript": "3.7.4",
-        "uuid": "3.3.3"
+        "typescript": "3.7.5",
+        "uuid": "3.4.0"
     },
     "scripts": {
         "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec 'craco start'",
@@ -69,11 +69,11 @@
     "xproxy": "https://appdev.kbase.us",
     "devDependencies": {
         "bluebird": "3.7.2",
-        "http-proxy-middleware": "0.20.0",
+        "fs-extra": "8.1.0",
+        "http-proxy-middleware": "1.0.0",
         "morgan": "1.9.1",
         "nodemon": "2.0.2",
-        "tar": "5.0.5",
-        "typedoc": "0.15.6",
-        "fs-extra": "8.1.0"
+        "tar": "6.0.1",
+        "typedoc": "0.16.10"
     }
 }
