--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build-plugin": "bash scripts/build-plugin.bash"
+        "build": "bash scripts/build-plugin.bash"
     },
     "repository": {
         "type": "git",
