--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,8 +4,7 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
-        "@craco/craco": "5.6.4",
-        "@kbase/ui-components": "0.2.1-alpha.16",
+        "@kbase/ui-components": "0.2.1-alpha.17",
         "@kbase/ui-lib": "0.2.1-alpha.3",
         "@types/bluebird": "*",
         "@types/enzyme": "*",
@@ -19,13 +18,17 @@
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
         "antd": "3.26.15",
+        "babel-plugin-import": "1.13.0",
         "bluebird": "3.7.2",
-        "craco-antd": "1.14.1",
+        "customize-cra": "1.0.0-alpha.0",
         "enzyme": "3.11.0",
         "enzyme-adapter-react-16": "1.15.2",
         "es-cookie": "1.3.2",
+        "less": "3.11.1",
+        "less-loader": "6.0.0",
         "papaparse": "5.2.0",
         "react": "16.13.1",
+        "react-app-rewired": "2.1.6",
         "react-dom": "16.13.1",
         "react-redux": "7.2.0",
         "react-scripts": "3.4.1",
@@ -37,11 +40,10 @@
         "uuid": "8.0.0"
     },
     "scripts": {
-        "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec 'craco start'",
-        "build": "craco build",
-        "install-plugin": "node scripts/install-plugin.js",
-        "test-disabled-until-fixed": "craco test --transformIgnorePatterns  \"<rootDir>[\\/]node_modules[\\/](?!@kbase/ui-lib).+\\.js$\"",
-        "test": "react-scripts test"
+        "start": "nodemon -w ./config-overrides.js --exec 'react-app-rewired start'",
+        "startx": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -71,5 +73,8 @@
         "morgan": "1.10.0",
         "nodemon": "2.0.3",
         "typedoc": "0.17.6"
+    },
+    "resolutions": {
+        "moment": "2.24.0"
     }
 }
