--- a/react-app/package.json
+++ b/react-app/package.json
@@ -17,7 +17,8 @@
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "3.26.15",
+        "@ant-design/icons": "4.1.0",
+        "antd": "4.2.0",
         "babel-plugin-import": "1.13.0",
         "bluebird": "3.7.2",
         "customize-cra": "1.0.0-alpha.0",
@@ -25,7 +26,7 @@
         "enzyme-adapter-react-16": "1.15.2",
         "es-cookie": "1.3.2",
         "less": "3.11.1",
-        "less-loader": "6.0.0",
+        "less-loader": "6.1.0",
         "papaparse": "5.2.0",
         "react": "16.13.1",
         "react-app-rewired": "2.1.6",
@@ -33,7 +34,7 @@
         "react-redux": "7.2.0",
         "react-scripts": "3.4.1",
         "react-test-renderer": "16.13.1",
-        "react-transition-group": "4.3.0",
+        "react-transition-group": "4.4.1",
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
         "typescript": "3.8.3",
@@ -43,7 +44,8 @@
         "start": "nodemon -w ./config-overrides.js --exec 'react-app-rewired start'",
         "startx": "react-app-rewired start",
         "build": "react-app-rewired build",
-        "test": "react-app-rewired test"
+        "test": "react-app-rewired test",
+        "install-plugin": "node scripts/install-plugin.js"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -69,12 +71,12 @@
         ]
     },
     "devDependencies": {
+        "bluebird": "3.7.2",
+        "fs-extra": "9.0.0",
         "http-proxy-middleware": "1.0.3",
         "morgan": "1.10.0",
         "nodemon": "2.0.3",
+        "tar": "6.0.2",
         "typedoc": "0.17.6"
-    },
-    "resolutions": {
-        "moment": "2.24.0"
     }
 }
