--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,10 +18,12 @@
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "4.2.2",
+        "antd": "4.2.4",
+        "antd-dayjs-webpack-plugin": "1.0.0",
         "babel-plugin-import": "1.13.0",
         "bluebird": "3.7.2",
         "customize-cra": "1.0.0-alpha.0",
+        "dayjs": "1.8.27",
         "enzyme": "3.11.0",
         "enzyme-adapter-react-16": "1.15.2",
         "es-cookie": "1.3.2",
@@ -37,8 +39,8 @@
         "react-transition-group": "4.4.1",
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
-        "typescript": "3.9.2",
-        "uuid": "8.0.0"
+        "typescript": "3.9.3",
+        "uuid": "8.1.0"
     },
     "scripts": {
         "start": "nodemon -w ./config-overrides.js --exec 'react-app-rewired start'",
@@ -73,10 +75,10 @@
     "devDependencies": {
         "bluebird": "3.7.2",
         "fs-extra": "9.0.0",
-        "http-proxy-middleware": "1.0.3",
+        "http-proxy-middleware": "1.0.4",
         "morgan": "1.10.0",
-        "nodemon": "2.0.3",
+        "nodemon": "2.0.4",
         "tar": "6.0.2",
-        "typedoc": "0.17.6"
+        "typedoc": "0.17.7"
     }
 }
