--- a/react-app/package.json
+++ b/react-app/package.json
@@ -22,7 +22,7 @@
         "antd-dayjs-webpack-plugin": "1.0.0",
         "babel-plugin-import": "1.13.0",
         "bluebird": "3.7.2",
-        "customize-cra": "1.0.0-alpha.0",
+        "customize-cra": "1.0.0",
         "dayjs": "1.8.28",
         "enzyme": "3.11.0",
         "enzyme-adapter-react-16": "1.15.2",
