--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,43 +4,43 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
-        "@ant-design/icons": "4.2.1",
+        "@ant-design/icons": "4.2.2",
         "@kbase/ui-components": "0.2.1-alpha.21",
         "@kbase/ui-lib": "0.2.1-alpha.3",
         "@types/bluebird": "*",
         "@types/enzyme": "*",
         "@types/enzyme-adapter-react-16": "*",
         "@types/jest": "*",
-        "@types/node": "*",
+        "@types/node": "12",
         "@types/papaparse": "*",
         "@types/react": "*",
         "@types/react-dom": "*",
         "@types/react-redux": "*",
         "@types/react-transition-group": "*",
         "@types/uuid": "*",
-        "antd": "4.3.4",
-        "antd-dayjs-webpack-plugin": "1.0.0",
+        "antd": "4.6.6",
+        "antd-dayjs-webpack-plugin": "1.0.1",
         "babel-plugin-import": "1.13.0",
         "bluebird": "3.7.2",
         "customize-cra": "1.0.0",
         "dayjs": "1.8.28",
         "enzyme": "3.11.0",
-        "enzyme-adapter-react-16": "1.15.2",
+        "enzyme-adapter-react-16": "1.15.5",
         "es-cookie": "1.3.2",
-        "less": "3.11.3",
-        "less-loader": "6.1.1",
-        "papaparse": "5.2.0",
+        "less": "3.12.2",
+        "less-loader": "7.0.1",
+        "papaparse": "5.3.0",
         "react": "16.13.1",
         "react-app-rewired": "2.1.6",
         "react-dom": "16.13.1",
-        "react-redux": "7.2.0",
-        "react-scripts": "3.4.1",
+        "react-redux": "7.2.1",
+        "react-scripts": "3.4.3",
         "react-test-renderer": "16.13.1",
         "react-transition-group": "4.4.1",
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
         "typescript": "3.9.5",
-        "uuid": "8.1.0"
+        "uuid": "8.3.1"
     },
     "scripts": {
         "start": "nodemon -w ./config-overrides.js --exec 'react-app-rewired start'",
@@ -75,10 +75,10 @@
     "devDependencies": {
         "bluebird": "3.7.2",
         "fs-extra": "9.0.1",
-        "http-proxy-middleware": "1.0.4",
+        "http-proxy-middleware": "1.0.5",
         "morgan": "1.10.0",
         "nodemon": "2.0.4",
-        "tar": "6.0.2",
-        "typedoc": "0.17.7"
+        "tar": "6.0.5",
+        "typedoc": "0.19.2"
     }
 }
