--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,43 +4,43 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
-        "@ant-design/icons": "4.2.2",
-        "@kbase/ui-components": "0.2.1-alpha.21",
+        "@ant-design/icons": "4.5.0",
+        "@kbase/ui-components": "0.2.1-alpha.22",
         "@kbase/ui-lib": "0.2.1-alpha.3",
-        "@types/bluebird": "*",
-        "@types/enzyme": "*",
+        "@types/bluebird": "3",
+        "@types/enzyme": "3",
         "@types/enzyme-adapter-react-16": "*",
         "@types/jest": "*",
-        "@types/node": "12",
-        "@types/papaparse": "*",
-        "@types/react": "*",
-        "@types/react-dom": "*",
-        "@types/react-redux": "*",
-        "@types/react-transition-group": "*",
-        "@types/uuid": "*",
-        "antd": "4.6.6",
-        "antd-dayjs-webpack-plugin": "1.0.1",
-        "babel-plugin-import": "1.13.0",
+        "@types/node": "14",
+        "@types/papaparse": "5",
+        "@types/react": "16",
+        "@types/react-dom": "16",
+        "@types/react-redux": "7",
+        "@types/react-transition-group": "4",
+        "@types/uuid": "8",
+        "antd": "4.12.3",
+        "antd-dayjs-webpack-plugin": "1.0.6",
+        "babel-plugin-import": "1.13.3",
         "bluebird": "3.7.2",
         "customize-cra": "1.0.0",
-        "dayjs": "1.8.28",
+        "dayjs": "1.10.4",
         "enzyme": "3.11.0",
-        "enzyme-adapter-react-16": "1.15.5",
+        "enzyme-adapter-react-16": "1.15.6",
         "es-cookie": "1.3.2",
-        "less": "3.12.2",
-        "less-loader": "7.0.1",
+        "less": "4.1.1",
+        "less-loader": "7.3.0",
         "papaparse": "5.3.0",
-        "react": "16.13.1",
-        "react-app-rewired": "2.1.6",
-        "react-dom": "16.13.1",
-        "react-redux": "7.2.1",
-        "react-scripts": "3.4.3",
-        "react-test-renderer": "16.13.1",
+        "react": "16.14.0",
+        "react-app-rewired": "2.1.8",
+        "react-dom": "16.14.0",
+        "react-redux": "7.2.2",
+        "react-scripts": "4.0.2",
+        "react-test-renderer": "16.14.0",
         "react-transition-group": "4.4.1",
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
-        "typescript": "3.9.5",
-        "uuid": "8.3.1"
+        "typescript": "4.1.5",
+        "uuid": "8.3.2"
     },
     "scripts": {
         "start": "nodemon -w ./config-overrides.js --exec 'react-app-rewired start'",
@@ -74,11 +74,11 @@
     },
     "devDependencies": {
         "bluebird": "3.7.2",
-        "fs-extra": "9.0.1",
-        "http-proxy-middleware": "1.0.5",
+        "fs-extra": "9.1.0",
+        "http-proxy-middleware": "1.0.6",
         "morgan": "1.10.0",
-        "nodemon": "2.0.4",
-        "tar": "6.0.5",
-        "typedoc": "0.19.2"
+        "nodemon": "2.0.7",
+        "tar": "6.1.0",
+        "typedoc": "0.20.25"
     }
 }
